tests/testcases/errors/BCE0100-1.boo
"""
BCE0100-1.boo(6,9): BCE0100: yield cannot be used inside constructors.
"""
class Foo:
	def constructor():
		yield 0
